5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4009/executions/1635_1053.log
== TEST (2019-04-10 12:37:08) 
-- CODE:
patrono = input("patrono: ")

if (patrono=="cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
	print(patrono,"nao eh patrono do Harry Potter")
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 12:37:20) 
-- CODE:
patrono = input("patrono: ")

if (patrono=="cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
	print(patrono,"nao eh patrono do Harry Potter")
-- EXECUTION TIME:
0.176544
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:

-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:37:27) 
-- CODE:
patrono = input("patrono: ")

if (patrono=="cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
	print(patrono,"nao eh patrono do Harry Potter")
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:37:46) 
-- CODE:
patrono = input("patrono: ")

if (patrono=="cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
	print("nao eh patrono do Harry Potter")
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 12:37:49) 
-- CODE:
patrono = input("patrono: ")

if (patrono=="cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
	print("nao eh patrono do Harry Potter")
-- EXECUTION TIME:
0.181238
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:

-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:37:50) 
-- CODE:
patrono = input("patrono: ")

if (patrono=="cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
	print("nao eh patrono do Harry Potter")
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:39:15) 
-- CODE:
pa = input("patrono: ")

if (patrono=="cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
	print(pa,"nao eh patrono do Harry Potter")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (patrono=="cervo"):
NameError: name 'patrono' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 12:39:38) 
-- CODE:
pa = input("patrono: ")

if (patrono=="cervo"):
	mensagem = ("cervo eh patrono do Harry Potter")
	
else:
	print(pa,"nao eh patrono do Harry Potter")
-- EXECUTION TIME:
0.166512
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/1053/main.py", line 3, in <module>
    if (patrono=="cervo"):
NameError: name 'patrono' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:39:39) 
-- CODE:
pa = input("patrono: ")

if (patrono=="cervo"):
	mensagem = ("cervo eh patrono do Harry Potter")
	
else:
	print(pa,"nao eh patrono do Harry Potter")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (patrono=="cervo"):
NameError: name 'patrono' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:40:04) 
-- CODE:
pa = input("patrono: ")

if (patrono=="cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
	print(pa,"nao eh patrono do Harry Potter")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (patrono=="cervo"):
NameError: name 'patrono' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:41:00) 
-- CODE:
pa = input("patrono: ")

if (patrono=="cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
	print(pa +" nao eh patrono do Harry Potter")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (patrono=="cervo"):
NameError: name 'patrono' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:41:34) 
-- CODE:
pa = input("patrono: ")

if (patrono=="cervo"):
	print("cervo eh patrono do Harry Potter")
	
else:
	print(pa +" nao eh patrono do Harry Potter")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (patrono=="cervo"):
NameError: name 'patrono' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 12:41:36) 
-- CODE:
pa = input("patrono: ")

if (patrono=="cervo"):
	print("cervo eh patrono do Harry Potter")
	
else:
	print(pa +" nao eh patrono do Harry Potter")
-- EXECUTION TIME:
0.265666
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/1053/main.py", line 3, in <module>
    if (patrono=="cervo"):
NameError: name 'patrono' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:41:43) 
-- CODE:
pa = input("patrono: ")

if (patrono=="cervo"):
	print("cervo eh patrono do Harry Potter")
	
else:
	print(pa +" nao eh patrono do Harry Potter")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    if (patrono=="cervo"):
NameError: name 'patrono' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-10 12:42:27) 
-- CODE:
pa = input("patrono: ")

if (pa=="cervo"):
	print("cervo eh patrono do Harry Potter")
	
else:
	print(pa +" nao eh patrono do Harry Potter")
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-10 12:42:33) 
-- CODE:
pa = input("patrono: ")

if (pa=="cervo"):
	print("cervo eh patrono do Harry Potter")
	
else:
	print(pa +" nao eh patrono do Harry Potter")
-- EXECUTION TIME:
0.130626
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
